// 2.55 Change Log
// Updated 24th April, 2022

Add 'Hero->TileMod' (read-only),
	'Hero->Kill(bool bypass_revive)',
	'Hero->Immortal'
	( EmilyV, Apr 24, 2022 )

Add 'generic' scripts, which can either:
	-Run 'frozen', similar to Active Subscreen and onF6 slots
	-Run 'passively' similar to Global Active, except, while running
		passively, 'WaitTo()' can be used to wait until precise timings
		within a frame.
	( EmilyV, Apr 20, 2022 )
Raft fixes
	( Deedee, Apr 20, 2022 )

Add multi-break/continue ('break 2;')
Fix F4 not working during onDeath script
Fix rounding error
Fix enemy/pit collision
	( EmilyV, Apr 19th, 2022 )

Fix 'mapdata->Enemy[]' offset
	( EmilyV, Apr 18th, 2022 )

Fix enhanced music warp issue
	( Deedee, Apr 10th, 2022 )

//A106

Added option to use old (internal) compile window instead of the external console window for compiling (Etc->Options->Use Internal Compiler). Compiling still happens externally to prevent memory issues, but you can have the old feel back.
Only one compile window can be active at a time now, and they close automatically when you close ZC (no more mountains of failed compile windows you need to manually close)
Made ZScript compile faster  (less endlag after success)
Fixed Scroll Warps blanking dungeon map.
Fixed Tile Warps resetting music if music is changed via script.
Fixed not being able to scroll screens while on a solid combo.
-Deedee
Fixed ZC not launching for some users
-Emily

//A105

Fixed bug where opening a quest wouldn't read certain strings properly
Fixed some issues with String Control Codes
Fixed Quest Time subscreen object not appearing on passive subscreen

-April 6th Nightly

Added Fix Tools->Pit and Liquid Damage Fix
Fixed ZQuest thinking it's been changed and needs to be saved when opening a quest
Can no longer be knocked back over pits
Fixed Hookshot Grabs not working on Layer 2 even with the QR enabled
Fixed Fairies not dying correctly when picked up or despawning