@@ -594,7 +594,8 @@ bool ZModule::init(bool d) //bool default
 		    "cSCRIPT11", "cSCRIPT12", "cSCRIPT13", "cSCRIPT14", "cSCRIPT15",
 		    "cSCRIPT16", "cSCRIPT17", "cSCRIPT18", "cSCRIPT19", "cSCRIPT20",
 		    "cTRIGGERGENERIC", "cPITFALL", "cSTEPSFX", "cBRIDGE", "cSIGNPOST",
-		    "cCSWITCH", "cCSWITCHBLOCK", "cTORCH", "cSPOTLIGHT", "cGLASS", "cLIGHTTARGET", "cSWITCHHOOK"
+		    "cCSWITCH", "cCSWITCHBLOCK", "cTORCH", "cSPOTLIGHT", "cGLASS", "cLIGHTTARGET", "cSWITCHHOOK",
+			"cBUTTONPROMPT"
 		};
 		
 		const char default_ctype_strings[cMAX][255] = 
@@ -633,7 +634,8 @@ bool ZModule::init(bool d) //bool default
 			"Script 14","Script 15","Script 16","Script 17","Script 18",
 			"Script 19", "Script 20", "Generic", "Pitfall", "Step->Effects",
 			"Bridge", "Signpost", "Switch", "Switch Block", "Torch",
-			"Spotlight", "Glass", "Light Trigger", "SwitchHook Block"
+			"Spotlight", "Glass", "Light Trigger", "SwitchHook Block",
+			"ButtonPrompt"
 		};
 		
 		for ( int32_t q = 0; q < cMAX; q++ )
